--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyNews</string>
     <string name="element_text">News</string>
+    <string name="creator">creator</string>
+    <string name="time">time</string>
 </resources>
