--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="element_text">News</string>
     <string name="creator">creator</string>
     <string name="time">time</string>
+    <string name="content">content\n</string>
 </resources>
